	PR rtl-optimization/17791 	* loop-doloop.c (doloop_modify): Take number of iterations as 	argument. 	(doloop_optimize): Extend or shorten the number of iterations 	when changing mode of counter register. 	* loop-iv.c (lowpart_subreg): Export. 	* rtl.h (lowpart_subreg): Declare.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@88668 138bc75d-0d04-0410-961f-82ee72b054a4